Update with NUSChoir stuff

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,7 +34,7 @@ h6{font-size:12px;}
 .btn-primary.focus,
 .btn-primary:active,
 .btn-primary.active,
-.open>.dropdown-toggle.btn-primary{color:#fff;background-color:#4eb28f;border-color:#4eb28f;}
+.open>.dropdown-toggle.btn-primary{color:#fff;background-color:#FF9E00;border-color:#FF9E00;}
 .btn-info{background-color:#52b3d9;border-color:rgba(51, 51, 51, 0.15);}
 .btn-info:hover,
 .btn-info:focus,
